--- a/styles/style.css
+++ b/styles/style.css
@@ -2,77 +2,81 @@
 
 .page {
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
-  background-image: url(../images/cover-image-dark.png);
+  background-image: url(../images/cover-image.png);
+  background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  background-position: top center;
   font-size: var(--main-font-size);
 }
 
 .header {
   padding: var(--page-margin);
   display: grid;
-  grid-template-rows: repeat(4, auto);
+  grid-template-rows: repeat(3, auto);
   position: relative;
 }
 
-
- .decorated-zone:after,  .decorated-zone>:first-child:after {
-    position:absolute;
-    content: "";
-    width: 25px;
-    height: 25px;
-    border-color: var(--accent-color); 
-    border-style:solid; 
-    border-width: 0;
+.decorated-zone::before,
+.decorated-zone::after {
+  content: "";
+  width: 25px;
+  height: 25px;
+  border-color: var(--outline-color);
+  position: absolute;
+  border-style: solid;
+  border-width: 0;
 }
 
-.decorated-zone:after {
-  top: var(--page-margin);
+.decorated-zone::before {
   right: var(--page-margin);
   border-block-start-width: 1px;
-  border-inline-end-width: 1px;}
+  border-inline-end-width: 1px;
+  top: var(--page-margin);
+}
 
-.decorated-zone>:first-child:after {
+.decorated-zone::after {
+  border-inline-start-width: 1px;
+  border-block-end-width: 1px;
   bottom: var(--page-margin);
   left: var(--page-margin);
-  border-block-end-width: 1px;
-  border-inline-start-width: 1px;
 }
 
 .header__dark-theme-decoration {
-  margin-block-end: 39px;
-  justify-self: end;
-}
-
-.header__dark-theme-decoration-text {
-  text-transform: uppercase;
-  color: var(--accent-color);
-  display: block;
-  position: relative;
-  margin-inline-end: 28px;
-}
-
-.header__dark-theme-decoration-text::after {
-  content: "";
-  background-color: var(--accent-color);
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  justify-content: flex-end;
   position: absolute;
+  right: calc(var(--page-margin) + 9px);
+  top: var(--page-margin);
+}
+
+.header__dark-theme-decoration::before {
+  content: "rec";
+  text-transform: uppercase;
+  color: var(--outline-color);
+}
+
+.header__dark-theme-decoration::after {
+  content: "";
+  background-color: var(--outline-color);
   width: 9px;
   height: 9px;
   border-radius: 50%;
-  box-shadow: 0 0 5px 2.5px var(--accent-color);
-  margin-block-start: 7px;
-  margin-inline-start: 10px;
+  box-shadow: 0 0 1px 2.5px var(--outline-color);
 }
 
 .header__theme-menu {
   justify-self: end;
-  margin-block-end: 68px;
+  margin-block: calc(var(--header-items-margin) + 10px);
 }
 
 .header__theme-menu-list {
   display: grid;
+  grid-template-columns: auto;
   grid-template-rows: repeat(3, auto);
-  gap: 10px;
+  gap: 11px;
 }
 
 .header__theme-menu-item {
@@ -83,75 +87,116 @@
   background: none;
   border: none;
   text-transform: lowercase;
-  color: var(--accent-color);
+  color: var(--outline-color);
   padding-inline: 13px;
-  
 }
-.header__theme-menu-button_type_light {
-}
+
 .header__theme-menu-button_active {
-  outline: 1px solid var(--accent-color);
+  outline: 1px solid var(--outline-color);
   pointer-events: none;
 }
-.header__theme-menu-button_type_auto {
+
+.header__theme-menu-button:hover {
+  border: 1px solid;
+  border-color: rgba(var(--hover-outline-color), 0.4);
 }
-.header__theme-menu-button_type_dark {
+
+.header__theme-menu-button:focus-visible {
+  border-block-end: 1px solid var(--outline-color);
 }
-.heder__title {
-  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+
+.title {
   text-shadow: 4px 4px 0 var(--accent-color);
-  color: var(--second-accent-color);
+  color: var(--title-color);
+}
+
+.header__title {
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   line-height: 95.7px;
   justify-self: start;
 }
-.title-decoration{
+
+.title-decoration {
   background-color: var(--accent-color);
   font-weight: bold;
   color: var(--dark-color);
   text-align: left;
   font-size: var(--main-font-size);
+  line-height: 23.4px;
 }
 .header__quote {
-  margin-block-start: 55px;
-  margin-block-end: 56px;
+  margin-block: var(--header-items-margin);
+  justify-self: center;
   white-space: pre-line;
 }
 
 main {
   background-color: var(--bkg-color);
   display: grid;
-  gap: 50px;
+  gap: calc(var(--section-margin) + var(--page-margin));
 }
 
 .section {
-  padding-inline: 10px;
+  padding-inline: var(--page-margin);
   display: grid;
   gap: 20px;
 }
 
 .section:first-child {
-  padding-block-start: 40px;
+  padding-block-start: var(--section-margin);
+  grid-template-rows: repeat(3, auto);
+  grid-template-columns: auto;
+  grid-template-areas:
+    "title"
+    "container"
+    "container";
 }
 
+.section:nth-child(2) {
+  grid-template-rows: repeat(4, auto);
+  grid-template-columns: auto;
+  grid-template-areas:
+    "title"
+    "container"
+    "container"
+    "container";
+}
 
-.section:nth-child(3) h3:first-child{
+.section:nth-child(3) {
+  grid-template-rows: repeat(6, auto);
+  grid-template-columns: auto;
+  grid-template-areas:
+    "title"
+    "container"
+    "container"
+    "container"
+    "container"
+    "container";
+}
+
+.section:nth-child(3) h3:first-child {
   font-weight: 400;
 }
 
-.section:last-child{
-  padding-block-end: 40px;
+.section:last-child {
+  padding-block-end: var(--section-margin);
 }
 
 .section__title {
-  color: var(--accent-color);
+  color: var(--subtitle-color);
   font-size: var(--main-font-size);
+  grid-area: title;
+  white-space: pre-wrap;
+}
+
+.section__content-subtitle {
+  height: fit-content;
 }
 
 .section__content {
   display: grid;
   gap: 10px;
-}
-.section__content-subtitle {
+  grid-area: container;
 }
 
 .section__content-description {
@@ -159,26 +204,241 @@ main {
   color: var(--text-color);
 }
 
-.section__content-description-link{
-  
+.section__content-description-link {
+  text-shadow: var(--accent-color) 2px 2px;
+  text-underline-offset: 4px;
 }
 
-.section-content-image {
+.section__content-description-link:hover {
+  border-block-end: 1px solid var(--text-color);
+}
+
+.section__content-description-link:focus,
+.header__theme-menu-button:focus {
+  outline: none;
+}
+
+.section__content-description-link:focus-visible {
+  outline: 1px solid var(--light-color);
+}
+
+.section__content__image-container {
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: repeat(5, auto);
+  gap: var(--page-margin);
+}
+
+.section__content-image {
+  height: 100%;
   width: 100%;
 }
 
 .footer {
   position: relative;
-  min-height: 668px;
+  min-height: 667px;
   background-color: var(--bkg-color);
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.decorated-zone {
-}
+
 .footer__title {
-  font-size: clamp(7.25rem, 5.7694rem + 6.3174vw, 9.8125rem);
-  color: var(--second-accent-color);
-  font-weight: 400;
+  font-size: clamp(7.25rem, 7.0212rem + 0.9975vw, 7.5rem);
+  font-weight: 700;
+}
+
+@media (376px < width <= 768px) {
+  .header__title {
+    margin-inline-start: calc(0px - var(--page-margin));
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+
+  .header__quote {
+    justify-self: end;
+    max-width: 365px;
+  }
+
+  .section:first-child {
+    grid-template-rows: repeat(2, auto);
+    grid-template-columns: 1fr 2fr;
+    grid-template-areas:
+      "title container"
+      "title container";
+  }
+
+  .section:nth-child(2) {
+    grid-template-rows: repeat(4, auto);
+    grid-template-columns: 1fr 2fr;
+  }
+
+  .section:nth-child(2) div {
+    grid-column-start: span 2;
+  }
+
+  .section:nth-child(3) {
+    grid-template-rows: repeat(6, auto);
+    grid-template-columns: 1fr 2fr;
+    grid-template-areas:
+      "title container"
+      "title container"
+      "title container"
+      "title container"
+      "title container"
+      "title container";
+  }
+
+  .section:last-child > .section__content {
+    gap: 20px;
+  }
+
+  .section__content__image-container {
+    grid-template-columns: repeat(3, auto);
+    grid-template-rows: repeat(3, auto);
+  }
+
+  .section__content-image {
+    object-fit: cover;
+  }
+
+  .section__content-image:first-child {
+    grid-column: 1 / 3;
+  }
+
+  .section__content-image:nth-child(2) {
+    grid-column: 3 / 4;
+    grid-row: 1 / 3;
+  }
+
+  .section__content-image:nth-child(3) {
+    grid-column: 1 / 2;
+    grid-row: 2 / 4;
+  }
+
+  .section__content-image:nth-child(4) {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+  }
+
+  .section__content-image:nth-child(5) {
+    grid-column: 2 / 4;
+    grid-row: 3 / 4;
+  }
+
+  .footer {
+    block-size: 100vh;
+  }
+}
+
+@media (769px < width) {
+  .header__theme-menu {
+    justify-self: center;
+    margin-block-start: 0;
+    margin-block-end: 291px;
+  }
+
+  .header__theme-menu-list {
+    grid-template-columns: repeat(3, auto);
+    grid-template-rows: auto;
+    gap: 11px;
+  }
+
+  .header__title {
+    margin-inline-start: calc(0px - var(--page-margin));
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    padding-block-end: 16px;
+  }
+
+  .header__quote {
+    justify-self: end;
+    max-width: 491px;
+  }
+
+  .section:first-child {
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-areas:
+      "title container container"
+      "title container container";
+  }
+
+  .section:first-child div {
+    grid-column: 2 / 4;
+  }
+
+  .section:nth-child(2) {
+    grid-template-rows: repeat(2, auto);
+    grid-template-columns: repeat(3, 1fr);
+    align-items: start;
+    grid-template-areas:
+      "title . ."
+      "container container container";
+  }
+
+  .section:nth-child(2) > .section__content {
+    grid-row: 2 / 3;
+    grid-template-rows: repeat(2, auto);
+    align-content: center;
+  }
+
+  .section:nth-child(3) {
+    grid-template-rows: repeat(6, auto);
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-areas:
+      "title container container"
+      "title container container"
+      "title container container"
+      "title container container"
+      "title container container"
+      "title container container";
+  }
+  .section:nth-child(3) div,
+  .section:nth-child(3) > h3 {
+    grid-column: 2 / 4;
+  }
+
+  .section:last-child > .section__content {
+    gap: 20px;
+  }
+
+  .section__content__image-container {
+    grid-template-columns: repeat(3, auto);
+    grid-template-rows: repeat(3, auto);
+  }
+
+  .section__content-image {
+    object-fit: cover;
+  }
+
+  .section__content-image:first-child {
+    grid-column: 1 / 3;
+  }
+
+  .section__content-image:nth-child(2) {
+    grid-column: 3 / 4;
+    grid-row: 1 / 3;
+  }
+
+  .section__content-image:nth-child(3) {
+    grid-column: 1 / 2;
+    grid-row: 2 / 4;
+  }
+
+  .section__content-image:nth-child(4) {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+  }
+
+  .section__content-image:nth-child(5) {
+    grid-column: 2 / 4;
+    grid-row: 3 / 4;
+  }
+
+  .footer {
+    block-size: 100vh;
+  }
+
+  .footer__title {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
 }
