--- a/styles/style.css
+++ b/styles/style.css
@@ -1,17 +1,15 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
 .page {
-  /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
+  background-image: url(../images/cover-image.png);
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: top center;
   font-size: var(--main-font-size);
-  background-color: var(--bkg-color);
 }
 
 .header {
-  background-image: url(../images/cover-image.png);
   padding: var(--page-margin);
   position: relative;
 }
@@ -19,20 +17,16 @@
 .header,
 .footer {
   min-height: 668px;
-  max-height: 100vh;
+  height: 100vh;
 }
 
-.header-container{
+.header-container {
   display: grid;
   grid-template-rows: repeat(3, auto);
 }
 
 .decorated-zone {
   height: inherit;
-}
-
-.header-container:first-child{
-  background-color: aqua;
 }
 
 .decorated-zone::before,
@@ -152,7 +146,8 @@
   white-space: pre-line;
 }
 
-main {
+section {
+  background-color: var(--bkg-color);
   display: grid;
   gap: calc(var(--section-margin) + var(--page-margin));
 }
@@ -163,7 +158,7 @@ main {
   gap: 20px;
 }
 
-.section.about{
+.section.about {
   padding-block-start: var(--section-margin);
 }
 
@@ -215,7 +210,7 @@ main {
 }
 
 .section__content-description-link:focus-visible {
-  outline: 1px solid var(--light-color);
+  outline: 1px solid currentColor;
 }
 
 .section__content__image-container {
@@ -231,8 +226,11 @@ main {
 }
 
 .footer {
-  position: relative;
   background-color: var(--bkg-color);
+  position: relative;
+}
+
+.footer > .decorated-zone {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -349,7 +347,7 @@ main {
     max-width: 491px;
   }
 
-  .header__quote{
+  .header__quote {
     white-space: normal;
   }
 
