--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
-/* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
+/*!!!! Вопрос по палитре в файле light.css */
 .page {
   background-image: url(../images/cover-image.png);
   background-size: cover;
